Change font for scorekeeping

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,14 @@
     font-style: normal;
 }
 
+@font-face {
+  font-family: 'hello_goodbyeregular';
+  src: url('webfontkit3/hellogoodbye-webfont.woff2') format('woff2'),
+       url('webfontkit3/hellogoodbye-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
     background-color: #fccc55;
 }
@@ -20,7 +28,10 @@ h1, h3, h4 {
 
 h3 {font-size: x-large;}
 
-h4 {font-size: large;}
+h4 {
+  font-size: 50;
+
+}
 
 .images {
     display: flex;
@@ -42,64 +53,11 @@ h4 {font-size: large;}
     transition: all .07s ease;
     }
 
-#playerSelected, #computerSelected {
-    color: #817f98
+#playerScoreCount, #computerScoreCount {
+    font-family: 'hello_goodbyeregular';
+    font-size: 40;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    display: flex;
+    justify-content: center;
+    
 }
-
-.modal {
-    position: fixed;
-    z-index: 1;
-    top: 60%;
-    left: 50%;
-    width: 300px;
-    padding: 30px;
-    border-radius: 10px;
-    background-color: #ff8d9c;
-    border: 6px solid black;
-    text-align: center;
-    font-size: 30px;
-    transform: translate(-50%, -50%) scale(0);
-    transition: 200ms ease-in-out;
-  }
-  
-  .active {
-    transform: translate(-50%, -50%) scale(1);
-  }
-  
-  .overlay {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #817f98;
-    opacity: 0.6;
-  }
-  
-  button {
-    border: none;
-    color: inherit;
-    font-family: inherit;
-    font-size: inherit;
-    cursor: pointer;
-    outline: none;
-  }
-
-  .btn {
-    font-family: 'oddly_calmingregular';
-    border-radius: 10px;
-    background-color: var(--secondary-dark);
-  }
-
-  .btn-restart {
-    padding: 10px 20px;
-    margin-top: 25px;
-    margin-bottom: 15px;
-  }
-
-  .modal-title {
-    font-family: 'oddly_calmingregular';
-    font-size: 40px;
-    font-weight: bold;
-  }
