--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,49 @@
   font-style: normal;
 }
 
+.hidden { display:none; }
+
+.pageCover { 
+  position:fixed; 
+  z-index:10; 
+  background-color:rgba(0,0,0,.25); 
+  width:100vw; 
+  height:100vh; 
+  top:0; 
+  left:0;
+}
+
+.modal { 
+  position:absolute; 
+  z-index:100; 
+  background-color:aliceblue;
+  border:2px double grey;
+  width:200px; 
+  height:200px; 
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  text-align:center;
+}
+
+.modalTitle {
+  margin:0;
+  background-color:#00a;
+  color:#ff0;
+  padding:5px;
+  font-weight:bold;
+  font-size:1.1em;
+}
+
+#close { 
+  background-color:#800080;
+  color:#ff0;
+  border:1px solid #e0e0e0;
+  padding:5px 10px;
+}
+
+#close:hover { background-color:#c000c0; }
+
 body {
     background-color: #fccc55;
 }
