--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,20 @@
 
 #close:hover { background-color:#55d47b ; }
 
+#endgameModal {
+  position:absolute; 
+  z-index:100; 
+  background-color:#ff8d9c;
+  border:6px solid black;
+  width:250px; 
+  height:250px; 
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  text-align:center;
+  border-radius: 25px;
+}
+
 body {
     background-color: #fccc55;
 }
