--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@
 
 #close:hover { background-color:#55d47b ; }
 
-#endgameModal {
+.endModal {
   position:absolute; 
   z-index:100; 
   background-color:#ff8d9c;
