--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@
 .endModal {
   position:absolute; 
   z-index:100; 
-  background-color:#ff8d9c;
+  background-color:#f5e94a;
   border:6px solid black;
   width:250px; 
   height:250px; 
@@ -72,6 +72,17 @@
   text-align:center;
   border-radius: 25px;
 }
+
+#playagain {
+  font-family: 'oddly_calmingregular';
+  background-color: #55d47b ;
+  font-size: 20;
+  border: 5px solid black ; 
+  padding:5px 10px;
+  border-radius: 25px;
+}
+
+#playagain:hover {background-color: #9da2e1 ; }
 
 body {
     background-color: #fccc55;
